--- a/quiz_2017/views/author.ejs
+++ b/quiz_2017/views/author.ejs
@@ -11,7 +11,7 @@
 
     <a href="/">Inicio</a>
     <a href="/author">Creditos</a>
-    
+    <a href="/help">Ayuda</a>    
 
     <p>Esta practica ha sido desarrollada por Natalia Torvisco Oto</p>
 
