--- a/quiz_2017/views/index.ejs
+++ b/quiz_2017/views/index.ejs
@@ -8,7 +8,7 @@
     <h1>Bienvenido a <%= title %></h1>
    <a href="/">Inicio</a>
    <a href="/author">Créditos</a>
-
+   <a href="/help">Ayuda</a>
     <p>El portal donde podra crear sus propios juegos!</p>
   </body>
 </html>
